<?xml version="1.0"?>
<package format="2">
  <name>srrg2_config_visualizer</name>
  <version>0.4.0</version>
  <description>srrg2_config_visualizer</description>
  <maintainer email="colosi@diag.uniroma1.it">Mirco Colosi</maintainer>
  <license>BSD-4</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
</package>
